删除微信三方依赖包

--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,11 @@
 		</dependency>
 		
 		<!--微信第三方SDK -->
-		<dependency>
-			<groupId>com.github.binarywang</groupId>
-			<artifactId>weixin-java-open</artifactId>
-			<version>3.0.0</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.github.binarywang</groupId> -->
+<!-- 			<artifactId>weixin-java-open</artifactId> -->
+<!-- 			<version>3.0.0</version> -->
+<!-- 		</dependency> -->
 	</dependencies>
 
 	<build>
