--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=time-house
 server.port=15001
 
 #datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/timehouse?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowMultiQueries=true&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://39.108.9.72:3306/timehouse?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowMultiQueries=true&serverTimezone=GMT%2B8&useSSL=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=timeHouse1021
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
