--- a/pom.xml
+++ b/pom.xml
@@ -36,19 +36,20 @@
 			<artifactId>xys-starter</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-pool2</artifactId>
 			<version>2.0</version>
 		</dependency>
-		
-		<!--微信第三方SDK -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.github.binarywang</groupId> -->
-<!-- 			<artifactId>weixin-java-open</artifactId> -->
-<!-- 			<version>3.0.0</version> -->
-<!-- 		</dependency> -->
+
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
